--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>React_Sample</title>
+    <link rel="stylesheet" href="bundle.css">
   </head>
   <body>
     <div class="container">
-      Hello React
     </div>
   </body>
   <script src="bundle.js" charset="utf-8"></script>
